--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = kruler
-url = https://download.kde.org/stable/release-service/19.12.2/src/kruler-19.12.2.tar.xz
+url = https://download.kde.org/stable/release-service/19.12.3/src/kruler-19.12.3.tar.xz
 archives = 
 giturl = https://anongit.kde.org/kruler.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
