--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = kruler
 url = https://download.kde.org/stable/release-service/20.04.2/src/kruler-20.04.2.tar.xz
 archives = 
-giturl = https://anongit.kde.org/kruler.git
+giturl = https://invent.kde.org/graphics/kruler.git
 domain = 
 alias = 
 
